Fix preview on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -438,8 +438,6 @@ a {
   }
   .cover-preview {
     margin: 20px auto 0;
-    position: absolute;
-    bottom: 0;
   }
 }
 
